--- a/AtoServer/ProjectAto.csproj
+++ b/AtoServer/ProjectAto.csproj
@@ -10,8 +10,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E2E867F5-FE1E-4CC0-93C2-EF710EC6798F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MJTradier_AI_Server</RootNamespace>
-    <AssemblyName>MJTradier_AI_Server</AssemblyName>
+    <RootNamespace>AtoServer</RootNamespace>
+    <AssemblyName>AtoServer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
